# rust-calculator

./: Cargo.toml  README.md
src/: error.rs  lib.rs  main.rs  parser.rs  solver.rs  types.rs
