[package]
name = "rust-calculator"
version = "0.1.0"
authors = ["Remco <remco@voorhoede.nl>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ansi_term = {version = "0.12.1", optional = true}

[features]
bin = ["ansi_term"]

[[bin]]
name = "calculator"
path = "./src/main.rs"
required-features = ["bin"]